# agentic-pm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: .gitignore  CLAUDE.md  board.db  package.json  pyproject.toml
backend/app/: ai.py  config.py  database.py  main.py
backend/app/auth/: permissions.py
backend/app/models/: board.py
backend/app/routes/: auth.py  board.py  boards.py  chat.py
backend/docs/: implementation-plan.md  integration-tests.md
backend/scripts/: test_ai.py
backend/tests/: conftest.py  test_ai.py  test_ai_connectivity.py  test_database.py  test_permissions.py
backend/tests/routes/: test_auth.py  test_board.py  test_chat.py
docs/: DATABASE.md  IMPLEMENTATION_PLAN.md  PLAN.md  SYSTEM_ARCHITECTURE.md  code_review.md  code_review_remediation.md  schema.json
docs/plans/: icon-update-plan.md  multi-board-plan.md
frontend/: CLAUDE.md  next.config.ts  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: BoardSelector.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  MembersPanel.tsx  NewCardForm.tsx
frontend/src/components/chat/: ChatMessage.test.tsx  ChatMessage.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  boardStore.ts  chat.ts  kanban.test.ts  kanban.ts  queryClient.ts
frontend/tests/: ai-chat.spec.ts  auth.spec.ts  docker-smoke.spec.ts  integration.spec.ts  kanban.spec.ts
scripts/: start.sh  stop.sh
